# jcp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  class_diagram_draw_io.drawio  todo.md
jcp/cam/: cam_generator.hpp  cam_generator_config.hpp  cam_profile.hpp  cam_profile_generator.hpp
jcp/file_exporter/: file_exporter.hpp
jcp/gui/: control_panel.hpp  control_plot_panel.hpp  plot_panel.hpp
jcp/include/: control_panel.hpp  control_plot_panel.hpp  file_exporter.hpp  plot_panel.hpp  profile_generator.hpp  window_id.hpp
jcp/include/cam/: cam_generator.hpp  cam_generator_config.hpp  cam_profile.hpp  cam_profile_generator.hpp  profile_range.hpp
jcp/include/view/: control_panel.hpp  control_plot_panel.hpp  file_exporter.hpp  plot_panel.hpp  window_id.hpp
jcp/source/: main.cpp  main_example.cpp
libs/mathplot/: mathplot.cpp  mathplot.h
